--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <div class="page">
     <ul>
-      <p style="margin-left:-30%;"><span style="color:red;">单击</span>以下按钮<br>可在本界面查看作业哦~<br>加载比较慢，请耐心等待哦！</p>
+      <p style="margin-left:-30%;"><span style="color:red;">单击</span>以下按钮<br>可在本界面查看作业<br>加载比较慢，请耐心等待哦~</p>
       <li onclick="changePage('page/one.html')">作业一<a href="page/one.html" target="_blank" title="">go to 新页面</a></li>
       <li onclick="changePage('page/two.html')">作业二<a href="page/two.html" target="_blank" title="">go to 新页面</a></li>
       <li onclick="changePage('page/three.html')">作业三<a href="page/three.html" target="_blank" title="">go to 新页面</a></li>
